--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@ height: 1000px;
 
     img{
         width: 200px;
-        padding-left: 30px;
+        padding-left: 0px;
     }
 
     nav{
@@ -39,7 +39,12 @@ height: 1000px;
 
     
 }
-
+.bulle-big{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 .bulle-truite{
     width: 200px;
     height: 200px;
@@ -53,7 +58,8 @@ height: 1000px;
 
     box-shadow: 0em 0em 2em $color-bulle;
 
-    margin: 0 0 0 900px ;
+    margin-top: 220px;
+    margin-left: 50px;
 
     cursor: pointer;
 }
@@ -69,8 +75,8 @@ height: 1000px;
     background-repeat: no-repeat;
 
     box-shadow: 0em 0em 2em $color-bulle;
-
-    margin: 100px 0 0 100px;
+    
+    
 
     cursor: pointer;
 }
@@ -79,70 +85,110 @@ height: 1000px;
     border: solid 2px $color-bulle;
     width: 180px;
     height: 180px;
-    margin-left: 400px;
+    box-shadow: 0em 0em 2em $color-bulle;
+    
+    background-image: url(img/bat-1.jpg);
+    background-position: bottom ;
+    background-size: 200px;
+    background-repeat: no-repeat;
+}
+.bulle-small5{
+    border-radius: 100em;
+    border: solid 2px $color-bulle;
+    width: 20px;
+    height: 20px;
+    box-shadow: 0em 0em 2em $color-bulle;
+    
+    }
+
+.bulle-middle{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    
 }
 
-section{
+.bulle-small{
+    display: flex;
+    justify-content: space-around;
+    margin : 0 300px 0 400px
+}
         
     .bulle-small1{
          border-radius: 100em;
         border: solid 2px $color-bulle;
         width: 15px;
         height: 15px;
-        margin-left: 750px;
+        margin-top: 200px;
+        box-shadow: 0em 0em 2em $color-bulle;
+        
+        
+        
     }
     .bulle-small2{
         border-radius: 100em;
         border: solid 2px $color-bulle;
         width: 20px;
         height: 20px;
-        margin-left: 700px;
-        margin-top: 30px;
+        margin-top: 100px;
+        box-shadow: 0em 0em 2em $color-bulle;
+        
    }
    .bulle-small3{
     border-radius: 100em;
     border: solid 2px $color-bulle;
     width: 30px;
     height: 30px;
-    margin-left: 800px;
+    margin-top: 150px;
+    box-shadow: 0em 0em 2em $color-bulle;
+    
     }
     .bulle-small4{
         border-radius: 100em;
         border: solid 2px $color-bulle;
         width: 60px;
         height: 60px;
-        margin-left: 700px;
+        box-shadow: 0em 0em 2em $color-bulle;
+       
         }
         .bulle-middle1{
             border-radius: 100em;
             border: solid 2px $color-bulle;
             width: 90px;
             height: 90px;
-            margin-left: 850px;
+            box-shadow: 0em 0em 2em $color-bulle;
+           
             }
             .bulle-middle2{
                 border-radius: 100em;
                 border: solid 2px $color-bulle;
                 width: 110px;
                 height: 110px;
-                margin-left: 550px;
+                margin-top: 150px;
+                box-shadow: 0em 0em 2em $color-bulle;
+                
+                
+                
                 }
                 .bulle-big1{
                     border-radius: 100em;
                     border: solid 2px $color-bulle;
                     width: 150px;
                     height: 150px;
-                    margin-left: 800px;
+                    margin-bottom: 100px;
+                    box-shadow: 0em 0em 2em $color-bulle;
+                    
+                    
                     }
     
 
 
-    img{
+    .pike-attack{
         width: 600px;
         height: auto;
         margin-left: 600px;
         }
-    }
+    
 
 
 
