--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header {
   height: 1000px; }
   header img {
     width: 200px;
-    padding-left: 30px; }
+    padding-left: 0px; }
   header nav {
     display: flex;
     justify-content: space-evenly; }
@@ -27,6 +27,12 @@ header {
       align-items: center;
       justify-content: space-evenly;
       width: 90%; }
+
+.bulle-big {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around; }
 
 .bulle-truite {
   width: 200px;
@@ -38,7 +44,8 @@ header {
   background-size: 260px;
   background-repeat: no-repeat;
   box-shadow: 0em 0em 2em #4f6070;
-  margin: 0 0 0 900px;
+  margin-top: 220px;
+  margin-left: 50px;
   cursor: pointer; }
 
 .bulle-record {
@@ -51,7 +58,6 @@ header {
   background-size: 335px;
   background-repeat: no-repeat;
   box-shadow: 0em 0em 2em #4f6070;
-  margin: 100px 0 0 100px;
   cursor: pointer; }
 
 .bulle-big2 {
@@ -59,52 +65,84 @@ header {
   border: solid 2px #4f6070;
   width: 180px;
   height: 180px;
-  margin-left: 400px; }
+  box-shadow: 0em 0em 2em #4f6070;
+  background-image: url(img/bat-1.jpg);
+  background-position: bottom;
+  background-size: 200px;
+  background-repeat: no-repeat; }
 
-section .bulle-small1 {
-  border-radius: 100em;
-  border: solid 2px #4f6070;
-  width: 15px;
-  height: 15px;
-  margin-left: 750px; }
-section .bulle-small2 {
+.bulle-small5 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 20px;
   height: 20px;
-  margin-left: 700px;
-  margin-top: 30px; }
-section .bulle-small3 {
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-middle {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+
+.bulle-small {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 300px 0 400px; }
+
+.bulle-small1 {
+  border-radius: 100em;
+  border: solid 2px #4f6070;
+  width: 15px;
+  height: 15px;
+  margin-top: 200px;
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-small2 {
+  border-radius: 100em;
+  border: solid 2px #4f6070;
+  width: 20px;
+  height: 20px;
+  margin-top: 100px;
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-small3 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 30px;
   height: 30px;
-  margin-left: 800px; }
-section .bulle-small4 {
+  margin-top: 150px;
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-small4 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 60px;
   height: 60px;
-  margin-left: 700px; }
-section .bulle-middle1 {
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-middle1 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 90px;
   height: 90px;
-  margin-left: 850px; }
-section .bulle-middle2 {
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-middle2 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 110px;
   height: 110px;
-  margin-left: 550px; }
-section .bulle-big1 {
+  margin-top: 150px;
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.bulle-big1 {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 150px;
   height: 150px;
-  margin-left: 800px; }
-section img {
+  margin-bottom: 100px;
+  box-shadow: 0em 0em 2em #4f6070; }
+
+.pike-attack {
   width: 600px;
   height: auto;
   margin-left: 600px; }
