--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ header {
       align-items: center;
       justify-content: space-evenly;
       width: 90%; }
+      header nav ul li {
+        font-size: 1.2em; }
+        header nav ul li a {
+          color: #4f6070; }
   header .flag-fr {
     margin-top: 20px; }
   header .flag-en {
@@ -111,23 +115,23 @@ header {
   margin-top: 200px;
   box-shadow: 0em 0em 2em #4f6070; }
 
-.bulle-small2 {
+.bulle-small2 img {
   border-radius: 100em;
   border: solid 2px #4f6070;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   margin-top: 100px;
   box-shadow: 0em 0em 2em #4f6070; }
 
-.bulle-small3 {
+.bulle-small3 img {
   border-radius: 100em;
   border: solid 2px #4f6070;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   margin-top: 150px;
   box-shadow: 0em 0em 2em #4f6070; }
 
-.bulle-small4 {
+.bulle-small4 img {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 60px;
@@ -149,33 +153,13 @@ header {
   margin-top: 150px;
   box-shadow: 0em 0em 2em #4f6070; }
 
-.bulle-big1 {
+.bulle-big1 img {
   border-radius: 100em;
   border: solid 2px #4f6070;
   width: 150px;
   height: 150px;
   margin-bottom: 100px;
   box-shadow: 0em 0em 2em #4f6070; }
-
-main .fb {
-  margin-top: 300px; }
-  main .fb img {
-    width: 80px;
-    height: 80px;
-    border-radius: 100em;
-    border: solid 2px #4f6070; }
-main .insta {
-  margin-top: 300px; }
-  main .insta img {
-    width: 80px;
-    height: 80px;
-    border-radius: 100em;
-    border: solid 2px #4f6070; }
-main .youtube img {
-  width: 80px;
-  height: 80px;
-  border-radius: 100em;
-  border: solid 2px #4f6070; }
 
 .pike-attack {
   width: 600px;
