--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 $color-bg:#b0c7f4;
-$color-bulle:#4f6070;
+$color-bulle:#FAFAFA;
 
 @mixin font {
     font-family: 'Muli', sans-serif;
@@ -212,13 +212,23 @@ height: 1000px;
                     
                     }
     
-
+main{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
    
          
          .pike-attack{
         width: 600px;
-        height: auto;
-        margin-left: 600px;
+        height: 600px;
+        
+        
+        }
+        .pecheur{
+            width: 300px;
+            height: 300px;
+            
         }
     
     
@@ -239,5 +249,89 @@ footer{
     background-repeat: no-repeat;
     height: 400px;
     
+    section{
+    display: flex;
+    justify-content: space-evenly;
     
+    padding-top: 120px;
+    color: white;
+    
+    a{
+        color: white;
+        font-size: 1em;
+        padding: 10px;
+    }
+    p{
+        padding: 10px;
+    }
+    h3{
+        color: white;
+        font-size: 1.3em;
+    }
+    
+
+    .peche{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-right: white solid 1px;
+        padding-right: 80px;
+        
+        
+    }
+    .hebergement{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 20px;
+        border-right: white solid 1px;
+        padding-right: 80px;
+    }
+    .contact{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 40px;
+        border-right: white solid 1px;
+        padding-right: 80px;
+    }
+    
+    .reseaux-sociaux{
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .logo-watermill{
+            width: 120px;
+            height: auto;
+        }
+        .flex-logo{
+            display: flex;
+            flex-direction: row;
+            .fb{
+                img{
+                width: 30px;
+                height: 30px;
+                border-radius: 100em;
+                border: solid 2px $color-bulle;}
+            }
+            .insta{
+                img{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 100em;
+                    border: solid 2px $color-bulle;
+                }
+            }
+            .youtube{
+                img{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 100em;
+                    border: solid 2px $color-bulle;
+                }
+            }
+        }
+    }
+}
 }
